# ATS_RESUME_SCORE_CALCULATOR

./: NOTES  app.py  pyproject.toml
static/: style.css
templates/: index.html
